--- a/OnTimer_Privacy_Policy.html
+++ b/OnTimer_Privacy_Policy.html
@@ -143,5 +143,34 @@
   <h2>Children’s Privacy</h2>
   <p>
     OnTimer is not intended for children under 13 years of age, and we do not
-    knowingly collect personal information from children. If we b
+    knowingly collect personal information from children. If we become aware that
+    we have received information from a child under 13, we will delete it.
+  </p>
 
+  <h2>Your Rights and Choices</h2>
+  <p>
+    Depending on your jurisdiction, you may have rights regarding your personal
+    data, including the right to access, correct, or delete certain information.
+    To make a request, please contact us at
+    <a href="mailto:ethanmgarr@gmail.com">ethanmgarr@gmail.com</a>.
+  </p>
+
+  <h2>Changes to This Privacy Policy</h2>
+  <p>
+    We may update this Privacy Policy from time to time. When we do, we will
+    update the “Last updated” date at the top of this page. Your continued use
+    of OnTimer after any changes indicates your acceptance of the updated
+    Privacy Policy.
+  </p>
+
+  <h2>Contact Us</h2>
+  <p>
+    For questions or concerns about this Privacy Policy or our data practices,
+    please contact:
+  </p>
+  <p>
+    <strong>Email:</strong>
+    <a href="mailto:ethanmgarr@gmail.com">ethanmgarr@gmail.com</a>
+  </p>
+</body>
+</html>
