Update Terms of Service with additional sections
Added disclaimers, indemnification, governing law, changes to terms, and contact information sections.

--- a/OnTimer_Terms_of_Service.html
+++ b/OnTimer_Terms_of_Service.html
@@ -136,5 +136,50 @@
   <p>
     Without limiting the foregoing, OnTimer is not responsible for missed
     meetings, missed reminders, or any consequences resulting from notification
-    failures, devic
+    failures, device issues, user configuration, or third-party service
+    outages.
+  </p>
+
+  <h2>Disclaimer of Warranties</h2>
+  <p>
+    OnTimer is provided on an “as is” and “as available” basis, without
+    warranties of any kind, whether express or implied, including but not
+    limited to implied warranties of merchantability, fitness for a particular
+    purpose, or non-infringement.
+  </p>
+
+  <h2>Indemnification</h2>
+  <p>
+    You agree to indemnify and hold harmless OnTimer and its creator from and
+    against any claims, liabilities, damages, losses, and expenses, including
+    reasonable attorney’s fees, arising out of or in any way connected with
+    your use of the app or violation of these Terms.
+  </p>
+
+  <h2>Governing Law</h2>
+  <p>
+    These Terms are governed by and construed in accordance with the laws of
+    the United States and the State of New Jersey, without regard to its
+    conflict of law principles.
+  </p>
+
+  <h2>Changes to These Terms</h2>
+  <p>
+    We may update these Terms from time to time. When we do, we will update the
+    “Last updated” date at the top of this page. Your continued use of OnTimer
+    after any changes indicates your acceptance of the updated Terms.
+  </p>
+
+  <h2>Contact Us</h2>
+  <p>
+    For support, questions, or legal requests related to these Terms, please
+    contact:
+  </p>
+  <p>
+    <strong>Email:</strong>
+    <a href="mailto:ethanmgarr@gmail.com">ethanmgarr@gmail.com</a>
+  </p>
+</body>
+</html>
+
 
