--- a/OnTimer_Terms_of_Service.html
+++ b/OnTimer_Terms_of_Service.html
@@ -20,7 +20,7 @@
 </head>
 <body>
   <h1>OnTimer Terms of Service</h1>
-  <p><strong>Last updated:</strong> [Insert Date]</p>
+  <p><strong>Last updated:</strong> [December 6, 2025]</p>
 
   <h2>Introduction</h2>
   <p>
