--- a/index.html
+++ b/index.html
@@ -1,22 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-site-verification" content="Nxw-2IDgGg9DmRcO2-xD0w4MprB4uggYcsR9L6QA0RQ" />
-    <title>OnTimer Legal Hub</title>
+  <meta charset="UTF-8" />
+  <title>OnTimer – Never Be Late for a Meeting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      max-width: 800px;
+      margin: 40px auto;
+      padding: 0 16px;
+      line-height: 1.6;
+      color: #222;
+    }
+    h1, h2, h3 {
+      color: #111;
+    }
+    a {
+      color: #007aff;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .tagline {
+      font-size: 1.1rem;
+      margin-bottom: 24px;
+    }
+    .section {
+      margin-bottom: 32px;
+    }
+    ul {
+      padding-left: 20px;
+    }
+  </style>
 </head>
-<body style="font-family: -apple-system, BlinkMacSystemFont, Segoe UI, sans-serif; max-width: 800px; margin: 40px auto; line-height: 1.6;">
-    <h1>OnTimer Legal Hub</h1>
+<body>
+  <h1>OnTimer</h1>
+  <p class="tagline"><strong>OnTimer is an iOS app that helps you never be late for a meeting by giving you simple, reliable alerts before your calendar events.</strong></p>
 
-    <p>Welcome to the official legal documentation page for the OnTimer app.</p>
-
-    <h2>Legal Documents</h2>
+  <div class="section">
+    <h2>What the app does</h2>
+    <p>OnTimer connects to your calendar so it can:</p>
     <ul>
-        <li><a href="OnTimer_Privacy_Policy.html">Privacy Policy</a></li>
-        <li><a href="OnTimer_Terms_of_Service.html">Terms of Service</a></li>
+      <li>Read your upcoming events and meetings.</li>
+      <li>Send you a reminder before each meeting, using the alert time you choose in the app.</li>
+      <li>Let you control which calendars are included and how far in advance alerts should fire.</li>
     </ul>
+    <p>OnTimer does <strong>not</strong> function as a calendar editor. It is focused only on helping you show up on time.</p>
+  </div>
 
-    <p>If you have questions, please contact: <a href="mailto:ethanmgarr@gmail.com">ethanmgarr@gmail.com</a></p>
+  <div class="section">
+    <h2>How OnTimer uses your Google data</h2>
+    <p>If you choose to connect a Google Account, OnTimer requests <strong>read-only access</strong> to your Google Calendar so it can:</p>
+    <ul>
+      <li>Read your list of calendars.</li>
+      <li>Read event details such as title, time, location, and recurrence.</li>
+    </ul>
+    <p>OnTimer does <strong>not</strong> create, edit, or delete events in your Google Calendar.</p>
+    <p>You can disconnect your Google Account from within the app at any time, which stops OnTimer from accessing your Google Calendar data going forward.</p>
+  </div>
+
+  <div class="section">
+    <h2>Privacy and terms</h2>
+    <p>For full details on how we handle your data and your rights as a user, please see:</p>
+    <ul>
+      <li><a href="https://ethanmgarr.github.io/ontimer-legal/OnTimer_Privacy_Policy.html">OnTimer Privacy Policy</a></li>
+      <li><a href="https://ethanmgarr.github.io/ontimer-legal/OnTimer_Terms_of_Service.html">OnTimer Terms of Service</a></li>
+    </ul>
+  </div>
+
+  <div class="section">
+    <h2>Contact</h2>
+    <p>If you have any questions about OnTimer or how it uses your data, please contact us at <a href="mailto:ethanmgarr@gmail.com">ethanmgarr@gmail.com</a>.</p>
+  </div>
 </body>
 </html>
