--- a/OnTimer_Privacy_Policy.html
+++ b/OnTimer_Privacy_Policy.html
@@ -36,7 +36,7 @@
   </p>
   <p>
     If you have any questions, please contact us at:
-    <a href="mailto:ethanmgarr@gmail.com">ethanmgarr@gmail.com</a>.
+    <a href="mailto:support@ontimer.app">support@ontimer.app</a>.
   </p>
 
   <h2>Information We Collect</h2>
