--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
   <div class="section">
     <h2>Contact</h2>
-    <p>If you have any questions about OnTimer or how it uses your data, please contact us at <a href="mailto:ethanmgarr@gmail.com">ethanmgarr@gmail.com</a>.</p>
+    <p>If you have any questions about OnTimer or how it uses your data, please contact us at <a href="mailto:support@ontimer.app">support@ontimer.app</a>.</p>
   </div>
 </body>
 </html>
