--- a/OnTimer_Privacy_Policy.html
+++ b/OnTimer_Privacy_Policy.html
@@ -152,7 +152,7 @@
     Depending on your jurisdiction, you may have rights regarding your personal
     data, including the right to access, correct, or delete certain information.
     To make a request, please contact us at
-    <a href="mailto:ethanmgarr@gmail.com">ethanmgarr@gmail.com</a>.
+    <a href="mailto:support@ontimer.app">support@ontimer.app</a>.
   </p>
 
   <h2>Changes to This Privacy Policy</h2>
