Fix email link in Terms of Service

--- a/OnTimer_Terms_of_Service.html
+++ b/OnTimer_Terms_of_Service.html
@@ -31,7 +31,7 @@
   </p>
   <p>
     If you have any questions about these Terms, please contact us at:
-    <a href="mailto:support@ontimer.app">support@ontimer.appm</a>.
+    <a href="mailto:support@ontimer.app">support@ontimer.app</a>.
   </p>
 
   <h2>Description of Service</h2>
