--- a/OnTimer_Privacy_Policy.html
+++ b/OnTimer_Privacy_Policy.html
@@ -170,7 +170,7 @@
   </p>
   <p>
     <strong>Email:</strong>
-    <a href="mailto:ethanmgarr@gmail.com">ethanmgarr@gmail.com</a>
+    <a href="mailto:support@ontimer.app">support@ontimer.app</a>
   </p>
 </body>
 </html>
