--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@
   </style>
 </head>
 <body>
+
   <h1>OnTimer</h1>
-  <p class="tagline"><strong>OnTimer is an iOS app that helps you never be late for a meeting by giving you simple, reliable alerts before your calendar events.</strong></p>
+  <p class="tagline"><strong>OnTimer is an iOS app that helps you never be late for a meeting by sending simple, reliable alerts before your calendar events.</strong></p>
 
   <div class="section">
     <h2>What the app does</h2>
-    <p>OnTimer connects to your calendar so it can:</p>
+    <p>OnTimer connects to your Google Calendar (and optionally Microsoft 365) to:</p>
     <ul>
-      <li>Read your upcoming events and meetings.</li>
-      <li>Send you a reminder before each meeting, using the alert time you choose in the app.</li>
-      <li>Let you control which calendars are included and how far in advance alerts should fire.</li>
+      <li>Read upcoming events and meetings.</li>
+      <li>Send reminders before each meeting, using the alert time you choose.</li>
+      <li>Let you configure which calendars are active and how far in advance alerts occur.</li>
     </ul>
     <p>OnTimer does <strong>not</strong> function as a calendar editor. It is focused only on helping you show up on time.</p>
   </div>
@@ -58,15 +59,15 @@
       <li>Read event details such as title, time, location, and recurrence.</li>
     </ul>
     <p>OnTimer does <strong>not</strong> create, edit, or delete events in your Google Calendar.</p>
-    <p>You can disconnect your Google Account from within the app at any time, which stops OnTimer from accessing your Google Calendar data going forward.</p>
+    <p>You can disconnect your Google Account from within the app at any time, which immediately stops all access.</p>
   </div>
 
   <div class="section">
     <h2>Privacy and terms</h2>
     <p>For full details on how we handle your data and your rights as a user, please see:</p>
     <ul>
-      <li><a href="https://ethanmgarr.github.io/ontimer-legal/OnTimer_Privacy_Policy.html">OnTimer Privacy Policy</a></li>
-      <li><a href="https://ethanmgarr.github.io/ontimer-legal/OnTimer_Terms_of_Service.html">OnTimer Terms of Service</a></li>
+      <li><a href="OnTimer_Privacy_Policy.html">OnTimer Privacy Policy</a></li>
+      <li><a href="OnTimer_Terms_of_Service.html">OnTimer Terms of Service</a></li>
     </ul>
   </div>
 
@@ -74,5 +75,6 @@
     <h2>Contact</h2>
     <p>If you have any questions about OnTimer or how it uses your data, please contact us at <a href="mailto:support@ontimer.app">support@ontimer.app</a>.</p>
   </div>
+
 </body>
 </html>
